--- a/ERPWeb/Views/AgroConfiguration/RawMaterialReturnAllList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/RawMaterialReturnAllList.cshtml
@@ -4,7 +4,7 @@
     var privilege = (ERPBO.Common.UserPrivilege)ViewBag.UserPrivilege;
 }
 
-<div class="row">
+<div class="row" style="margin-top:-10px">
     <div class="col-md-12">
 
 
