--- a/ERPWeb/Views/AgroConfiguration/RawMaterialReturnList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/RawMaterialReturnList.cshtml
@@ -4,7 +4,7 @@
     var privilege = (ERPBO.Common.UserPrivilege)ViewBag.UserPrivilege;
 }
 
-<div class="row">
+<div class="row"style="margin-top:-10px">
     <div class="col-md-12">
 
 
@@ -34,7 +34,7 @@
                                     <div class="card-header">
                                         <div class="row ">
                                             <div class="col-md-2 float-right">
-                                                <h5 class="text-right">Search By</h5>
+                                                <h5 class="text-left">Search By</h5>
                                             </div>
 
                                             <div class="col-md-3 ">
