--- a/ERPWeb/Views/AgroConfiguration/ReceivedOrCanelIssuedRawMaterial.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/ReceivedOrCanelIssuedRawMaterial.cshtml
@@ -24,15 +24,15 @@
         </div>
     </div>
 </div>*@
-<div class="row text-sm">
+<div class="row text-sm" style="margin-top:-15px">
     <div class="col-md-12" style="margin-top:-10px">
         <div class="card card-navy">
             <div class="card-header">
                 <div class="row">
                     <div class="col-md-8">
-                        <h6 class="text-center" >
+                        <h5 class="text-left" >
                             Requisition Information
-                        </h6>
+                        </h5>
                     </div>
                     <div class="col-md-4">
                         <div class="input-group">
