--- a/ERPWeb/Views/AgroConfiguration/SalesReturn.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesReturn.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row" @*style="margin-top:-15px*@">
+<div class="row" style="margin-top:-10px">
 
     <div class="col-md-12">
 
@@ -97,7 +97,7 @@
 
             @section scripts{
 
-                <script type="text/javascript">
+ <script type="text/javascript">
 
 
         var ddlInvoiceNo = $("#ddlInvoiceNo");
@@ -105,6 +105,9 @@
         var ddlStokiestID = $("#ddlStokiestID");
 
         var returnqty = $(".returnqty");
+
+
+
 
 
         $(document).ready(function () {
@@ -116,6 +119,20 @@
 
 
         })
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
