--- a/ERPWeb/Views/AgroConfiguration/SalesReturnList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesReturnList.cshtml
@@ -4,7 +4,7 @@
 }
 
 
-<div class="row">
+<div class="row" style="margin-top:-10px">
     <div class="col-md-12">
 
 
@@ -37,7 +37,7 @@
                     <div class="card-header">
                         <div class="row justify-content-center">
                             <div class="col-md-2">
-                                <h5 class="text-center">Search By</h5>
+                                <h5 class="text-right">Search By</h5>
                             </div>
                             <div class="col-md-2">
 
@@ -76,7 +76,7 @@
 
 
     </div>
-            </div>
+  </div>
 
 
             @section scripts{
