--- a/ERPWeb/Views/AgroConfiguration/GetAgroSalesProductList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetAgroSalesProductList.cshtml
@@ -5,23 +5,14 @@
     var privilege = (ERPBO.Common.UserPrivilege)ViewBag.UserPrivilege;
 }
 
-<div class="row">
+<div class="row" style="margin-top:-10px">
     <div class="col-md-12">
-        <div class="card card-primary card-outline card-tabs" style="margin-top:-20px">
-            <div class="card-header p-0 pt-1 border-bottom-0">
-                <ul class="nav nav-tabs" id="custom-tabs-two-tab" role="tablist">
-                    <li class="nav-item">
-                        <a class="nav-link active" id="custom-tabs-two-AgroSalesProductList-tab" data-toggle="pill" href="#custom-tabs-two-AgroSalesProductList" role="tab" aria-controls="custom-tabs-two-AgroSalesProductList" aria-selected="true">Agro Sales Product List</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="card-body">
-                <div class="tab-content" id="custom-tabs-two-tabContent">
+
                     @Html.AntiForgeryToken()
-                    <div class="tab-pane fade show active" id="custom-tabs-two-AgroSalesProductList" role="tabpanel" aria-labelledby="custom-tabs-two-AgroSalesProductList-tab">
+
                         <div class="row" style="margin-top:-15px">
                             <div class="col-md-12">
-                                <div class="card card-gray-dark">
+                                <div class="card card-navy">
                                     <div class="card-header">
                                         <div class="row">
                                             <div class="col-md-3">
@@ -33,7 +24,7 @@
                                             </div>
                                             <div class="col-md-3">
 
-                                                <a href="/AgroConfiguration/CreateAgroSalesProduct" class="btn btn-outline-primary btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i> Create Sales Product</a>
+                                                <a href="/AgroConfiguration/CreateAgroSalesProduct" class="btn btn-outline-warning btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i> Create Sales Product</a>
 
                                             </div>
                                         </div>
@@ -43,48 +34,38 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12" style="margin-top:-10px">
-                                <div class="card card-navy">
+                                <div class="card card-gray-dark">
                                     <div class="card-header">
-                                        <h6 class="card-title">Search By</h6>
-                                    </div>
-                                    <div class="card-body text-sm">
-                                        <div class="row" style="margin-top:-15px">
-                                            <div class="col-md-2" style="margin-top:-5px">
-                                                <label class="col-form-label">InvoiceNo </label>
+                                        <div class="row justify-content-center">
+                                            <div class="col-md-2">
+                                                <h5 class="text-right">Search By</h5>
+                                            </div>
+                                            <div class="col-md-2">
                                                 <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="search Invoice" />
                                             </div>
 
                                             <div class="col-md-2">
-                                                <label for="ddlStockiest" class="control-label">Stockiest Name</label>
                                                 @Html.DropDownList("ddlStockiest", (IEnumerable<SelectListItem>)ViewBag.ddlStockiest, "--Select Stockiest--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
 
                                             </div>
 
-
                                             <div class="col-md-2">
-                                                <label class="control-label font-weight-bold">From Date</label>
                                                 <div class="input-group input-group-sm ">
-                                                    <input type="text" class="form-control form-control-sm date-datePicker" id="dptFromDate" />
+                                                    <input type="text" class="form-control form-control-sm date-datePicker" id="dptFromDate" placeholder="From Date" />
                                                     <div class="input-group-prepend cursor-pointer remove-date dptFromDate" style="cursor:pointer">
                                                         <span class="input-group-text">&#10008;</span>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="col-md-2">
-                                                <label class="control-label font-weight-bold">To Date</label>
                                                 <div class="input-group input-group-sm ">
-                                                    <input type="text" class="form-control form-control-sm date-datePicker" id="dptToDate" />
+                                                    <input type="text" class="form-control form-control-sm date-datePicker" id="dptToDate" placeholder="To Date" />
                                                     <div class="input-group-prepend remove-date dptToDate" style="cursor:pointer">
                                                         <span class="input-group-text">&#10008;</span>
                                                     </div>
                                                 </div>
                                             </div>
-
                                         </div>
-
-                                        @*<div class="col-md-2">
-                                            <input type="text" class="form-control form-control-sm" id="SearchInvoiceNo" placeholder="search Invoice" />
-                                        </div>*@
 
                                     </div>
                                 </div>
@@ -92,17 +73,14 @@
                             <div class="col-md-12" style="margin-top:-10px">
                                 <div class="card">
                                     <div class="card-body">
-                                        <div class="col-md-12" id="dataContainer">
-                                            @*@{Html.RenderAction("GetFinishGoodRecipeList", "AgroConfiguration", new { @flag = "View" });}*@
+                                        <div class="col-md-12" id="dataContainer" >
+                    
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+
     </div>
 </div>
 
