--- a/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
@@ -23,21 +23,31 @@
         padding: 40px;
         border-radius: 6px;
     }
+    .btn1 {
+        background-color: #001F3F;
+        color: white;
+        border: 1px solid white;
+    }
+        .btn1:hover {
+            background-color: green;
+            color: white;
+            border: 1px solid;
+        }
 </style>
-<div class="row" style=" margin-top: -30px">
+<div class="row" style=" margin-top: -35px">
     <div class="col-md-12">
-        <div class="card  shadow card card-outline card-tabs" style="margin-top:-30px">
+        <div class="card  shadow card card-outline card-tabs " style="margin-top:-30px">
 
 
-            <ul class="nav nav-tabs nav-pills bg-navy" @*style="color: #2F4F4F"*@ id="custom-tabs-two-tab" role="tablist">
-                <li class="nav-item">
-                    <a class="nav-link active text-white" id="custom-tabs-two-pstockrawmaterialqty-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterialqty" role="tab" aria-controls="custom-tabs-two-pstockrawmaterialqty" aria-selected="false"> Raw Material Stock</a>
+            <ul class="nav nav-tabs nav-pills bg-navy py-1 px-1"  id="custom-tabs-two-tab" role="tablist">
+                <li class="nav-item  btn1">
+                    <a class="nav-link active  text-white  btn" id="custom-tabs-two-pstockrawmaterialqty-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterialqty" role="tab" aria-controls="custom-tabs-two-pstockrawmaterialqty" aria-selected="false"> Raw Material Stock</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" id="custom-tabs-two-pstockrawmaterialList-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterialList" role="tab" aria-controls="custom-tabs-two-pstockrawmaterialList" aria-selected="false">Purchase & Stock Raw Material list</a>
+                <li class="nav-item btn1">
+                    <a class="nav-link text-white btn  mx-0" id="custom-tabs-two-pstockrawmaterialList-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterialList" role="tab" aria-controls="custom-tabs-two-pstockrawmaterialList" aria-selected="false">Purchase & Stock Raw Material list</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" id="custom-tabs-two-pstockrawmaterial-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterial" role="tab" aria-controls="custom-tabs-two-pstockrawmaterial" aria-selected="false">Purchase And Stock</a>
+                <li class="nav-item btn1">
+                    <a class="nav-link text-white btn" id="custom-tabs-two-pstockrawmaterial-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterial" role="tab" aria-controls="custom-tabs-two-pstockrawmaterial" aria-selected="false">Purchase And Stock</a>
                 </li>
 
             </ul>
@@ -52,7 +62,7 @@
 
                     <div class="row" style=" margin-top: -30px">
                         <div class="col-md-12">
-                            @*<div class="card card-navy shadow" style=" margin-top: -15px">*@
+                           
                             <div class="card card-gray-dark">
                                 <div class="card-header">
                                     <div class="row justify-content-center">
@@ -60,22 +70,22 @@
                                             <h5 class="text-center">Search By</h5>
                                         </div>
                                         <div class="col-md-2">
-                                            @*<label class="col-form-label">Invoice No </label>*@
+                                 
                                             <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="search Invoice" />
                                         </div>
 
                                         <div class="col-md-2">
-                                            @*<label class="col-form-label">PO Number </label>*@
+                            
                                             <input type="text" class="form-control form-control-sm" id="searchByPO" placeholder="search PO" />
                                         </div>
 
                                         <div class="col-md-2">
-                                            @*<label class="col-form-label">Challan No </label>*@
+                                 
                                             <input type="text" class="form-control form-control-sm" id="searchByChallan" placeholder="search Challan" />
                                         </div>
 
                                         <div class="col-md-2">
-                                            @*<label for="ddlSupplierName1" class="col-form-label">Supplier Name</label>*@
+  
                                             @Html.DropDownList("ddlSupplierName1", (IEnumerable<SelectListItem>)ViewBag.ddlSupplierName, "--Select Supplier--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
 
                                         </div>
@@ -104,8 +114,8 @@
 
                 <div class="tab-pane fade show " id="custom-tabs-two-pstockrawmaterial" role="tabpanel" aria-labelledby="custom-tabs-two-pstockrawmaterial-tab">
                     <div class="row mb-5">
-                        <div class="col-md-12" style="margin-top:-30px">
-                            <div class="card card-navy">
+                        <div class="col-md-12" style="margin-top: -30px">
+                            <div class="card card-navy shadow">
                                 <div class="card-header" style="text-align: center;">
 
                                     <div class="row">
@@ -125,29 +135,26 @@
 
 
                                 @*addbodey*@
-                                <div class="card-body shadow">
-                                    <div class="row">
+                                <div class="card-body " style="margin-bottom:-10px">
+                                    <div class="row small">
 
 
 
-                                        <div class="col-md-4">
+                                        <div class="col-md-12">
                                             <div class="container-fluid">
-                                                <h5 style="border-bottom:2px solid #08054e">Information</h5>
+                                              
                                                 <div class="row justify-content-center">
 
-                                                    <div class="col-md-12">
-
-                                                        <div class="row">
-                                                            <div class="col-md-6">
+                                                            <div class="col-md-3">
                                                                 <label for="ddlSupplierName" class="control-label">Supplier Name</label>
                                                                 @Html.DropDownList("ddlSupplierName", (IEnumerable<SelectListItem>)ViewBag.ddlSupplierName, "--Select Supplier--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                                                                 <span class="error hide req-SupplierName font-weight-bold">Supplier Name is required!</span>
                                                             </div>
 
-                                                            <div class="col-md-6">
+                                                            <div class="col-md-3">
                                                                 <div class="form-group">
                                                                     <label for="ddlInvoiceDate">Invoice Date</label>
-                                                                    <div class="input-group date" id="datePicker">
+                                                                    <div class="input-group-sm date" id="datePicker">
 
                                                                         <input type="text" class="form-control" id="ddlInvoiceDate" name="date" value="">
                                                                         <span class="input-group-addon">
@@ -157,46 +164,40 @@
                                                                 </div>
                                                             </div>
 
-
-                                                        </div>
-
-                                                        <div class="row">
-                                                            <div class="col-md-6">
-                                                                <label for="ddlChallanNo" class="col-form-label">Challan No.</label>
+                                                            <div class="col-md-3">
+                                                                <label for="ddlChallanNo" class="control-label">Challan No.</label>
                                                                 <input type="text" id="ddlChallanNo" class="form-control form-control-sm" />
                                                                 <span class="error hide req-ddlChallanNo font-weight-bold">Chalan No is required!</span>
 
                                                             </div>
-                                                            <div class="col-md-6">
-                                                                <label for="ddlInvoiceNo" class="col-form-label">Invoice No.</label>
+                                                            <div class="col-md-3">
+                                                                <label for="ddlInvoiceNo" class="control-label">Invoice No.</label>
                                                                 <input type="text" id="ddlInvoiceNo" class="form-control form-control-sm" />
                                                                 <span class="error hide req-ddlInvoiceNo font-weight-bold">Invoice No is required!</span>
                                                             </div>
-                                                        </div>
 
-                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
 
+                                    </div>
 
-
-
-                                        <div class="col-md-8">
+                                    <div class="row small">
+                                        <div class="col-md-12">
                                             <div class="container-fluid" @*style="background-color:#e7f1f6;"*@>
-                                                <h5 style="border-bottom:2px solid #f87878">RawMaterial</h5>
+                                            
                                                 <div class="row justify-content-center">
 
                                                     <div class="col-md-12">
 
                                                         <div class="row">
-                                                            <div class="col-md-3">
+                                                            <div class="col-md-2">
                                                                 <label class="control-label" for="ddlRawMaterial">RawMaterial</label>
                                                                 @Html.DropDownList("ddlRawMaterial", (IEnumerable<SelectListItem>)ViewBag.ddlRawMaterial, "--Select RawMaterial--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                                                                 <span class="error hide req-ddlRawMaterial">RawMaterial Is Required</span>
                                                             </div>
 
-                                                            <div class="col-md-1">
+                                                            <div class="col-md-2">
                                                                 <label for="ddlUnitName">Unit</label>
                                                                 <input type="text" id="ddlUnitName" name="ddlUnitName" class="form-control form-control-sm" readonly />
                                                             </div>
@@ -210,7 +211,7 @@
                                                                 <input type="number" id="ddluprice" name="uprice" class="form-control form-control-sm" />
                                                                 <span class="error hide req-uprice">Unit Price Is Required</span>
                                                             </div>
-                                                            <div class="col-md-2">
+                                                            <div class="col-md-1">
                                                                 <label for="ddlqty"> Qty</label>
                                                                 <input type="number" id="ddlqty" name="qty" class="form-control form-control-sm" />
                                                                 <span class="error hide req-qty">Qty Is Required</span>
@@ -220,11 +221,10 @@
                                                                 <input type="number" id="ddlttprice" name="ddlttprice" class="form-control form-control-sm" readonly />
                                                             </div>
 
-
                                                             <div class="col-md-2">
                                                                 <div class="form-group">
                                                                     <label for="ddlexpdate">Expire Date</label>
-                                                                    <div class="input-group date" id="datePicker">
+                                                                    <div class="input-group-sm date" id="datePicker">
 
                                                                         <input type="text" class="form-control" id="ddlexpdate" name="date" value="">
                                                                         <span class="input-group-addon">
@@ -232,19 +232,13 @@
                                                                         </span>
                                                                     </div>
                                                                 </div>
-                                                                @*<div class="form-group">
-                                                                        <label for="ddlexpdate">Exp Date</label>
-                                                                        <input type="date" class="form-control" id="ddlexpdate" placeholder="Expire Date">
-                                                                        <span class="error hide req-ddlexpdate font-weight-bold">date requered!</span>
-                                                                    </div>*@
+      
                                                             </div>
-
-
 
                                                             <div class="col-md-1">
                                                                 <label for="" class="control-label font-weight-bold" style="visibility:hidden">Add</label>
                                                                 <div class="clearfix">
-                                                                    <button type="submit" class="btn btn-sm btn-outline-success" id="addTolist"><i class="fas fa-plus"></i></button>
+                                                                    <button type="submit" class="btn btn-sm float-right btn-outline-success" id="addTolist"><i class="fas fa-plus"></i></button>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -255,9 +249,6 @@
                                                 </div>
                                             </div>
                                         </div>
-
-
-
                                     </div>
                                 </div>
                                 @*addbodey*@
@@ -267,9 +258,9 @@
                         </div>
 
 
-                        <div class="card-body">
+                        <div class="card-body" style=" margin-top: -30px">
 
-                            <div class="card-body table-responsive p-0 shadow" style="height: 200px;">
+                            <div class="card-body table-responsive p-0 shadow " style="height: 200px;">
                                 <table class="table table-head-fixed text-nowrap tadd" id="tblPstockrawmaterial">
                                     <thead>
                                         <tr class="text-center" style="color:black">
@@ -323,7 +314,7 @@
                                 <div class="card-header">
                                     <div class="row text-sm">
                                         <div class="col-md-2">
-                                            <h5 class="text-center">Search by:</h5>
+                                            <h5>Search by:</h5>
                                         </div>
                                         <div class="col-md-3 float-right">
                                             <input type="text" class="form-control form-control-sm" id="searchByAnyy" placeholder="Search by any" />
