--- a/ERPWeb/Views/AgroConfiguration/GetProductFinishGoodList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetProductFinishGoodList.cshtml
@@ -3,21 +3,21 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row">
+<div class="row"  style="margin-top:-5px">
     <div class="col-md-12">
-        <div class="card  shadow card card-primary card-outline card-tabs" style="margin-top:-20px">
-            <div class="card-header p-0 pt-1 border-bottom-0">
+        <div class="card  shadow card card-outline card-tabs" style="margin-top:-20px">
+        
 
-                <ul class="nav nav-tabs nav-pills" id="custom-tabs-two-tab" role="tablist">
+                <ul class="nav nav-tabs nav-pills bg-navy" id="custom-tabs-two-tab" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" id="custom-tabs-two-producFinishGoodList-tab" data-toggle="pill" href="#custom-tabs-two-producFinishGoodList" role="tab" aria-controls="custom-tabs-two-producFinishGoodList" aria-selected="false">FinishGood list</a>
+                        <a class="nav-link active text-white" id="custom-tabs-two-producFinishGoodList-tab" data-toggle="pill" href="#custom-tabs-two-producFinishGoodList" role="tab" aria-controls="custom-tabs-two-producFinishGoodList" aria-selected="false">FinishGood list</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="custom-tabs-two-finishGoodProduction-tab" data-toggle="pill" href="#custom-tabs-two-finishGoodProduction" role="tab" aria-controls="custom-tabs-two-finishGoodProduction" aria-selected="false">Finish Good Production</a>
+                        <a class="nav-link text-white" id="custom-tabs-two-finishGoodProduction-tab" data-toggle="pill" href="#custom-tabs-two-finishGoodProduction" role="tab" aria-controls="custom-tabs-two-finishGoodProduction" aria-selected="false">Finish Good Production</a>
                     </li>
                 </ul>
 
-            </div>
+  
 
         </div>
 
@@ -31,50 +31,27 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row" style=" margin-top: -30px">
                         <div class="col-md-12">
-                            <div class="card card-navy shadow">
+                            <div class="card card-gray-dark shadow">
                                 <div class="card-header">
-                                    <h6 class="card-title">Search By</h6>
-                                </div>
-                                <div class="card-body text-sm">
-                                    <div class="row" style="margin-top:-15px">
-
-                                        <div class="col-md-2" style="margin-top:-5px">
-                                            <label class="col-form-label">Receip Code </label>
-                                            <input type="text" class="form-control form-control-sm" id="ddlReceipBatchCode1" placeholder="Search ReceipCode" />
-                                        </div>
-
+                                    <div class="row justify-content-center">
                                         <div class="col-md-2">
-                                            <label class="control-label" for="ddlProduct1">Product</label>
+                                            <h5 class="text-center">Search By</h5>
+                                        </div>
+                                        <div class="col-md-2">
+                                            <input type="text" class="form-control form-control-sm" id="ddlReceipBatchCode1" placeholder="Search ReceipCode" />
+                                        </div>  <div class="col-md-2">
                                             @Html.DropDownList("ddlProduct1", (IEnumerable<SelectListItem>)ViewBag.ddlProduct, "-Select Product-", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
-
-                                            <span class="error hide req-ddlProduct">Product Name is Required</span>
                                         </div>
 
                                     </div>
+
                                 </div>
 
-                                @*<div class="row text-sm">
-                                        <div class="col-md-2">
-                                            <h4>Search by:</h4>
-                                        </div>
-                                        <div class="col-md-3 float-right">
-                                            <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="Search by any" />
-
-                                        </div>
-                                        <div class="col-7">
-
-                                        </div>
-
-                                    </div>*@
-
                             </div>
-
-
                         </div>
-
-                    </div>
+                     </div>
                     <div class="row">
 
                         <div class="col-md-12" style="margin-top:-10px">
@@ -91,24 +68,21 @@
                     </div>
                 </div>
                 <div class="tab-pane fade show " id="custom-tabs-two-finishGoodProduction" role="tabpanel" aria-labelledby="custom-tabs-two-finishGoodProduction-tab">
-                    <div class="row">
+                    <div class="row" style=" margin-top: -30px">
                         <div class="col-md-12">
                             <div class="card card-navy">
                                 <div class="card-header" style="text-align: center;">
 
                                     <div class="row">
-                                        <div class="col-md-3">
 
-                                        </div>
-                                        <div class="col-md-6">
+                                        <div class="col-md-12">
+                                            <button class="btn btn-success btn-sm btn float-right" id="btnSubmit">SAVE <i class="fas fa-paper-plane"></i></button>
                                             <h5 class="text-center text-bold">
 
                                                 Finish Good Production
                                             </h5>
                                         </div>
-                                        <div class="col-md-3">
 
-                                        </div>
 
                                     </div>
                                 </div>
@@ -166,11 +140,11 @@
                                             <div class="col-md-12" style="overflow-y:scroll">
                                                 <table class="table table-bordered table-sm text-sm table-striped table-responsive-lg" id="tblFinishGoodProduction">
                                                     <thead>
-                                                        <tr>
+                                                        @*<tr>
                                                             <th colspan="6">
                                                                 <button class="btn btn-outline-success btn-sm float-lg-right" id="btnSubmit">SAVE <i class="fas fa-paper-plane"></i> </button>
                                                             </th>
-                                                        </tr>
+                                                        </tr>*@
                                                         <tr class="btn-dark">
 
                                                             <th>Raw Material</th>
@@ -200,12 +174,7 @@
 <div class="modal fade" id="ModalProductionFinishGoodDetails" role="dialog" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
-            @*<div class="modal-header alert-secondary">
-                <h4 id="modalHeading" class="modal-title">Raw Material Consume Details</h4>
-                <button type="button" class="close" data-dismiss="modal">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>*@
+
             <div class="modal-body" id="dataContainer2">
 
             </div>
