--- a/ERPWeb/Views/AgroConfiguration/GetProductwisesalesReport.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetProductwisesalesReport.cshtml
@@ -5,73 +5,67 @@
 }
 
 
-<div class="row text-sm">
+<div class="row text-sm" style="margin-top:-20px">
     <div class="col-md-12">
-        <div class="card card-primary card-outline card-outline-tabs" style="margin-top:-20px">
-            <div class="card-header p-0 pt-1 border-bottom-0">
-                <ul class="nav nav-tabs" id="custom-tabs-one" role="tablist">
-                    <li class="nav-item">
-                        <a class="nav-link active" id="custom-tabs-one-ProductWiseSalesReport-tab" data-toggle="pill" href="#custom-tabs-one-ProductWiseSalesReport" role="tab" aria-controls="custom-tabs-one-ProductWiseSalesReport" aria-selected="true">
-                            Product Wise sales Statement Report
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="card-body">
-                <div class="tab-content" id="custom-tabs-one-tabContent">
-                    <div class="tab-pane fade show active" id="custom-tabs-one-ProductWiseSalesReport" role="tabpanel" aria-labelledby="custom-tabs-one-ProductWiseSalesReport-tab">
-                        <div class="row" style="margin-top:-15px">
-                            <div class="col-md-12">
-                                <div class="card shadow">
-                                    <div class="card-header">
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <h5>Search By:</h5>
-                                            </div>
-                                            <div class="col-md-6">
 
-                                            </div>
-                                        </div>
-                                        <div class="row mt-1">
-                                            <div class="col-md-2">
-                                                <label for="ddlProductName" class="control-label font-weight-bold">
-                                                    Product Name
-                                                </label>
-                                                @Html.DropDownList("ddlProductName", (IEnumerable<SelectListItem>)ViewBag.ddlProductName, "--Select ProductName--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
-                                                <span class="error hide req-ProductName font-weight-bold">Product Name is required!</span>
-                                            </div>
-                                            <div class="col-md-2">
-                                                <label class="control-label font-weight-bold" for="dptFromDate">From Date</label>
-                                                <div class="input-group input-group-sm">
-                                                    <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptFromDate" />
-                                                    <div class="input-group-prepend cursor-pointer remove-list-date dptFromDate" style="cursor:pointer">
-                                                        <span class="input-group-text">&#10008;</span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-md-2">
-                                                <label class="control-label font-weight-bold" for="dptToDate">ToDate</label>
-                                                <div class="input-group input-group-sm">
-                                                    <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptToDate" />
-                                                    <div class="input-group-prepend cursor-pointer remove-list-date dptToDate" style="cursor:pointer">
-                                                        <span class="input-group-text">&#10008;</span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-md-2">
-                                                <label class="control-label" for="rptType">Type</label>
-                                                <div class="input-group input-group-sm">
-                                                    <select class="form-control form-control-sm float-right" id="rptType" name="rptType">
-                                                        <option value="PDF">PDF</option>
-                                                        <option value="EXCEL">EXCEL</option>
-                                                    </select>
-                                                    <span class="input-group-append">
-                                                        <button type="button" id="btnDownload" title="Download" class="btn btn-block btn-info btn-flat"><i class="fas fa-download"></i></button>
-                                                    </span>
-                                                </div>
-                                            </div>
-                                        </div>
+        <div class="row" style="margin-top:-5px">
+            <div class="col-md-12">
+                <div class="card card-navy">
+                    <div class="card-header" style="text-align: center;">
+                        <div class="row">
+                            <div class="col-md-3">
+                            </div>
+                            <div class="col-md-6">
+                                <h5 class="text-center text-bold">
+                                    Product Wise Sales Statement
+                                </h5>
+                            </div>
+                            <div class="col-md-3">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row" style="margin-top:-10px">
+            <div class="col-md-12">
+                <div class="card card-gray-dark">
+                    <div class="card-header">
+                        <div class="row justify-content-center">
+                            <div class="col-md-2">
+                                <h5 class="text-right">Search By</h5>
+                            </div>
+                            <div class="col-md-2">
+                                @Html.DropDownList("ddlProductName", (IEnumerable<SelectListItem>)ViewBag.ddlProductName, "--ProductName--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                                <span class="error hide req-ProductName font-weight-bold">Product Name is required!</span>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="input-group input-group-sm">
+                                    <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptFromDate" placeholder="FromDate" />
+                                    <div class="input-group-prepend cursor-pointer remove-list-date dptFromDate" style="cursor:pointer">
+                                        <span class="input-group-text">&#10008;</span>
                                     </div>
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="input-group input-group-sm">
+                                    <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptToDate" placeholder="ToDate" />
+                                    <div class="input-group-prepend cursor-pointer remove-list-date dptToDate" style="cursor:pointer">
+                                        <span class="input-group-text">&#10008;</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="input-group input-group-sm">
+                                    <select class="form-control form-control-sm float-right" id="rptType" name="rptType">
+                                        <option value="PDF">PDF</option>
+                                        <option value="EXCEL">EXCEL</option>
+                                    </select>
+                                    <span class="input-group-append">
+                                        <button type="button" id="btnDownload" title="Download" class="btn btn-block btn-info btn-flat"><i class="fas fa-download"></i></button>
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -79,17 +73,21 @@
                 </div>
             </div>
         </div>
+
+
     </div>
+
 </div>
+
 @section scripts{
     <script type="text/javascript">
 
-       
+
         var dptFromDate = $("#dptFromDate");
         var dptToDate = $("#dptToDate");
         var rptType = $("#rptType");
         var ddlProductName = $("#ddlProductName");
-       
+
 
         $(document).ready(function () {
 
@@ -135,11 +133,11 @@
         })
 
         $("#btnDownload").click(function () {
-            if (dptFromDate.val() == "" && dptToDate.val() == "" && ddlProductName.val()=="") {
+            if (dptFromDate.val() == "" && dptToDate.val() == "" && ddlProductName.val() == "") {
                 bootbox.alert("Please Select Anyone");
             }
             else {
-                window.open("/AgroConfiguration/GetProductwisesalesReportDownload?fromDate=" + dptFromDate.val() + "&toDate=" + dptToDate.val() + "&rptType=" + rptType.val()+"&productId="+ ddlProductName.val());
+                window.open("/AgroConfiguration/GetProductwisesalesReportDownload?fromDate=" + dptFromDate.val() + "&toDate=" + dptToDate.val() + "&rptType=" + rptType.val() + "&productId=" + ddlProductName.val());
             }
         })
 
