--- a/ERPWeb/Views/AgroConfiguration/GetSalesReturnAdjustList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetSalesReturnAdjustList.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row">
+<div class="row" style="margin-top:-10px">
     <div class="col-md-12">
 
                         <div class="row" style="margin-top:-15px">
