--- a/ERPWeb/Views/AgroConfiguration/SalesCommission.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesCommission.cshtml
@@ -2,23 +2,31 @@
     ViewBag.Title = "SalesCommision";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="row">
-
-
-
-
-    <div class="card-body shadow">
+<div class="row"  style="margin-top:-10px">
+    <div class="col-md-12">
 
         <div class="row" style="margin-top:-15px">
             <div class="col-md-12">
-                <div class="card shadow card-gray-dark">
-
+                <div class="card card-navy">
+                    <div class="card-header" style="text-align: center;">
+                        <div class="row">
+                            <div class="col-md-3">
+                            </div>
+                            <div class="col-md-6">
+                                <h5 class="text-center text-bold">
+                                    Commission On Sales
+                                </h5>
+                            </div>
+                            <div class="col-md-3">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row" style="margin-top:-10px">
             <div class="col-md-12">
-                <div class="card card-navy shadow">
+                <div class="card card-gray-dark">
                     <div class="card-header">
                         <div class="row text-sm">
                             <div class="col-md-2">
