--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesReturn.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesReturn.cshtml
@@ -9,22 +9,22 @@
 <table class="table table-bordered table-striped table-sm table-responsive-lg text-sm">
     @if (info != null)
     {
-    <tr>
-        <td style="width:5%">Invoice</td>
-        <td style="width:15%"><b>@info.InvoiceNo</b></td>
-        <td style="width:5%">Date</td>
-        <td style="width:12%"><b>@info.InvoiceDate.Value.ToString("dd-MMM-yyyy")</b></td>
-        <td style="width:5%">StockiestName</td>
-        <td style="width:15%"><b>@info.StockiestName</b></td>
-        <td style="width:20%" class="hide"><b>@info.StockiestId</b></td>
-        <td style="width:5%">Total</td>
-        <td style="width:10%"><b>@info.TotalAmount</b></td>
-        <td style="width:5%">Paid</td>
-        <td style="width:10%"><b>@info.PaidAmount</b></td>
-        <td style="width:5%">Due</td>
-        <td style="width:10%"><b>@info.DueAmount</b></td>
+        <tr>
+            <td style="width:5%">Invoice</td>
+            <td style="width:15%"><b>@info.InvoiceNo</b></td>
+            <td style="width:5%">Date</td>
+            <td style="width:12%"><b>@info.InvoiceDate.Value.ToString("dd-MMM-yyyy")</b></td>
+            <td style="width:5%">StockiestName</td>
+            <td style="width:15%"><b>@info.StockiestName</b></td>
+            <td style="width:20%" class="hide"><b>@info.StockiestId</b></td>
+            <td style="width:5%">Total</td>
+            <td style="width:10%"><b>@info.TotalAmount</b></td>
+            <td style="width:5%">Paid</td>
+            <td style="width:10%"><b>@info.PaidAmount</b></td>
+            <td style="width:5%">Due</td>
+            <td style="width:10%"><b>@info.DueAmount</b></td>
 
-    </tr>
+        </tr>
     }
 </table>
 <table class="table table-bordered table-striped table-sm table-responsive-lg text-sm" id="tblReturnItems">
@@ -48,36 +48,62 @@
         @foreach (var item in Model)
         {
             sl = sl + 1;
-        <tr>
-            <td class="text-center">@sl</td>
-            <td class="text-center">@item.FinishGoodProductName</td>
-            <td class="text-center">@item.QtyKG</td>
-            <td class="text-center hide">@item.MeasurementName</td>
-            <td class="text-center">@item.MeasurementSize</td>
-            <td class="text-center hide">@item.TotalCurrentQTY</td>
-            <td class="text-center">@item.CurrentQTY</td>
-            <td class="text-center">@item.Price</td>
-            <td class="text-center" style="width:10%">
-                <input type="number" class="returnqty form-control form-control-sm " value="0" />
-                <span class="error hide">Quantity must be <=available Quantity</span>
-            </td>
-            <td class="text-center" style="width:15%">
-                <input type="number" class="returnprice form-control form-control-sm " value="0" />
-                @*<span class="error hide">Quantity must be <=available Quantity</span>*@
-            </td>
-            @*<td class="text-center " contenteditable='true'></td>
-        <td class="text-center" contenteditable='true'></td>*@
-            @*<td class="text-center"><input type="number" /></td>
-        <td class="text-center"><input type="number" /></td>*@
-            @*<td class="hide"><input type="number" />@item.ProductSalesInfoId</td>*@
-            <td class="hide">@item.FinishGoodProductInfoId</td>
-            <td class="hide">@item.MeasurementId</td>
-            <td class="hide">@item.FGRId</td>
+            <tr>
+                <td class="text-center">@sl</td>
+                <td class="text-center">@item.FinishGoodProductName</td>
+                <td class="text-center">@item.QtyKG</td>
+                <td class="text-center hide">@item.MeasurementName</td>
+                <td class="text-center">@item.MeasurementSize</td>
+                <td class="text-center hide">@item.TotalCurrentQTY</td>
+                <td class="text-center">@item.CurrentQTY</td>
+                <td class="text-center">@item.Price</td>
+                <td class="text-center" style="width:10%">
+                    <input type="number" class="returnqty form-control form-control-sm" value="0" />
+                    <span class="error hide">Rerurn Quantity must be less then or equal sales qty</span>
+                </td>
+                <td class="text-center" style="width:15%">
+                    <input type="number" class="returnprice form-control form-control-sm " value="0" />
+                    @*<span class="error hide">Quantity must be <=available Quantity</span>*@
+                </td>
+                @*<td class="text-center " contenteditable='true'></td>
+                    <td class="text-center" contenteditable='true'></td>*@
+                @*<td class="text-center"><input type="number" /></td>
+                    <td class="text-center"><input type="number" /></td>*@
+                @*<td class="hide"><input type="number" />@item.ProductSalesInfoId</td>*@
+                <td class="hide">@item.FinishGoodProductInfoId</td>
+                <td class="hide">@item.MeasurementId</td>
+                <td class="hide">@item.FGRId</td>
 
 
-        </tr>
+            </tr>
         }
     </tbody>
 </table>
 
 
+    <script type="text/javascript">
+
+
+        var returnqty = $(".returnqty");
+
+
+
+
+        returnqty.on('change', function () {
+            //alert();
+            var availableQty = $(this).parent().parent().find("td:eq(6)").text();
+            var ReturnQuntity = $(this).val();
+            if (Number(ReturnQuntity) <= Number(availableQty)) {
+
+
+                $(this).parent().children("span").addClass("hide");
+            }
+            else {
+               
+                $(this).parent().children("span").removeClass("hide");
+            }
+
+
+        });
+
+    </script>
