--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterialIssuePartialView.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterialIssuePartialView.cshtml
@@ -6,7 +6,7 @@
     var SL = 0;
 }
 <div class="row">
-    <div class="col-md-12" style="overflow-y:scroll">
+    <div class="col-md-12">
         <table class="table table-bordered table-striped table-hover table-sm text-sm" id="tblTerritoryData">
             <thead class="btn-dark">
                 <tr class="text-center">
